--- a/index.html
+++ b/index.html
@@ -43,13 +43,19 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">Informatii Proiect</a>
+              <a class="nav-link js-scroll-trigger" href="#informatii">Informatii</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#obiective">Obiective</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#echipe">Echipe Cercetare</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#deplasari">Deplasari</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="#parteneri">Parteneri</a>
             </li>
           </ul>
         </div>
@@ -64,7 +70,7 @@
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">OH, MA CHEVRE!</h1>
               <p class="intro-text">“OPTIMIZAREA PARAMETRILOR REPRODUCTIVI, GENETICI ŞI DE SĂNĂTATE ÎN VEDEREA AMELIORĂRII PRODUCȚIEI EFECTIVELOR DE CAPRINE”</p>
-              <a href="#about" class="btn btn-circle js-scroll-trigger">
+              <a href="#informatii" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
             </div>
@@ -73,12 +79,24 @@
       </div>
     </header>
 
-    <!-- About Section -->
-    <section id="about" class="content-section text-center">
+    <section id="informatii" class="content-section text-center">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>INFORMATII PROIECT</h2>
+            <h2>Informatii despre Proiect</h2>
+            <h5>PN III/P3/3.1//Modulul AUF-RO nr. 18-AUF/16.08.2016</h5>
+            <p>Crearea unei reţele ştiinţifice axate asupra diferitelor aspecte ale creşterii caprinelor (gestionarea reproducţiei, efectul antioxidant asupra parametrilor reproductivi, gestionarea sănătăţii, markerilor genetici), şi de a le permite integrarea rezultatelor cercetărilor şi dezvoltarea soluţiilor pentru crescătorii de capre în zona ECO în contextul provocărilor actuale.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <section id="obiective" class="download-section content-section text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>OBIECTIVELE PROIECTULUI</h2>
 
                 <div class="accordion">
                   <div class="accordion-section">
@@ -108,8 +126,55 @@
       </div>
     </section>
 
-    <!-- Sectiune Deplasari -->
-    <section id="deplasari" class="download-section content-section text-center">
+    <section id="echipe" class="content-section text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>ECHIPELE DE CERCETARE</h2>
+
+                <div class="accordion">
+                  <div class="accordion-section">
+                    <a class="accordion-section-title" href="#accordion-4">CROAŢIA</a>
+                    <div id="accordion-4" class="accordion-section-content">
+                      <p>Mauris interdum fringilla augue vitae tincidunt. Curabitur vitae tortor id eros euismod ultrices. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent nulla mi, rutrum ut feugiat at, vestibulum ut neque? Cras tincidunt enim vel aliquet facilisis. Duis congue ullamcorper vehicula. Proin nunc lacus, semper sit amet elit sit amet, aliquet pulvinar erat. Nunc pretium quis sapien eu rhoncus. Suspendisse ornare gravida mi, et placerat tellus tempor vitae.</p>
+                    </div><!--end .accordion-section-content-->
+                  </div><!--end .accordion-section-->
+
+                  <div class="accordion-section">
+                    <a class="accordion-section-title" href="#accordion-5">GRECIA</a>
+                    <div id="accordion-5" class="accordion-section-content">
+                      <p>Mauris interdum fringilla augue vitae tincidunt. Curabitur vitae tortor id eros euismod ultrices. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent nulla mi, rutrum ut feugiat at, vestibulum ut neque? Cras tincidunt enim vel aliquet facilisis. Duis congue ullamcorper vehicula. Proin nunc lacus, semper sit amet elit sit amet, aliquet pulvinar erat. Nunc pretium quis sapien eu rhoncus. Suspendisse ornare gravida mi, et placerat tellus tempor vitae.</p>
+                    </div><!--end .accordion-section-content-->
+                  </div><!--end .accordion-section-->
+
+                  <div class="accordion-section">
+                    <a class="accordion-section-title" href="#accordion-6">MACEDONIA</a>
+                    <div id="accordion-6" class="accordion-section-content">
+                      <p>Mauris interdum fringilla augue vitae tincidunt. Curabitur vitae tortor id eros euismod ultrices. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent nulla mi, rutrum ut feugiat at, vestibulum ut neque? Cras tincidunt enim vel aliquet facilisis. Duis congue ullamcorper vehicula. Proin nunc lacus, semper sit amet elit sit amet, aliquet pulvinar erat. Nunc pretium quis sapien eu rhoncus. Suspendisse ornare gravida mi, et placerat tellus tempor vitae.</p>
+                    </div><!--end .accordion-section-content-->
+                  </div><!--end .accordion-section-->
+
+                  <div class="accordion-section">
+                    <a class="accordion-section-title" href="#accordion-7">REPUBLICA MOLDOVA</a>
+                    <div id="accordion-7" class="accordion-section-content">
+                      <p>Mauris interdum fringilla augue vitae tincidunt. Curabitur vitae tortor id eros euismod ultrices. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent nulla mi, rutrum ut feugiat at, vestibulum ut neque? Cras tincidunt enim vel aliquet facilisis. Duis congue ullamcorper vehicula. Proin nunc lacus, semper sit amet elit sit amet, aliquet pulvinar erat. Nunc pretium quis sapien eu rhoncus. Suspendisse ornare gravida mi, et placerat tellus tempor vitae.</p>
+                    </div><!--end .accordion-section-content-->
+                  </div><!--end .accordion-section-->
+
+                  <div class="accordion-section">
+                    <a class="accordion-section-title" href="#accordion-8">ROMÂNIA</a>
+                    <div id="accordion-8" class="accordion-section-content">
+                      <p>Mauris interdum fringilla augue vitae tincidunt. Curabitur vitae tortor id eros euismod ultrices. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent nulla mi, rutrum ut feugiat at, vestibulum ut neque? Cras tincidunt enim vel aliquet facilisis. Duis congue ullamcorper vehicula. Proin nunc lacus, semper sit amet elit sit amet, aliquet pulvinar erat. Nunc pretium quis sapien eu rhoncus. Suspendisse ornare gravida mi, et placerat tellus tempor vitae.</p>
+                    </div><!--end .accordion-section-content-->
+                  </div><!--end .accordion-section-->
+                </div><!--end .accordion-->
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="deplasari" class="content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
           <h2>Deplasari</h2>
@@ -170,7 +235,6 @@
       </div>
     </section>
 
-    <!-- Contact Section -->
     <section id="contact" class="content-section text-center">
       <div class="container">
         <div class="row">
