changed deplasari to activitati

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a class="nav-link js-scroll-trigger" href="#echipe">Echipe Cercetare</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#deplasari">Deplasari</a>
+              <a class="nav-link js-scroll-trigger" href="#activitati">Activitati</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#parteneri">Parteneri</a>
@@ -213,10 +213,10 @@
       </div>
     </section>
 
-    <section id="deplasari" class="download-section content-section text-center">
+    <section id="activitati" class="download-section content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
-          <h2>Deplasari</h2>
+          <h2>Activitati</h2>
               <div class="carousel slide" id="myCarousel">
               <div class="carousel-inner">
        
