added description to faculties logos

--- a/index.html
+++ b/index.html
@@ -34,22 +34,6 @@
     <!-- Modernizr -->
     <script src="js/modernizr.js"></script>
 
-    <style type="text/css">
-      .flex-caption {
-        width: 100%;
-        padding: 2%;
-        left: 0;
-        bottom: 0;
-        color: #fff;
-        font-size: 18px;
-        line-height: 18px;
-        margin-top: -66px;
-      }
-      li.css a {
-        border-radius: 0;
-      }
-    </style>
-
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap.min.js'></script>
     <script type="text/javascript" src="js/accordion.js"></script>
@@ -346,13 +330,36 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>PARTENERI</h2>
-            <div class="gallery">
-                <img src="img/romania.png" alt="Fjords" width="160" height="150">
-                <img src="img/moldova.png" alt="Forest" width="140" height="180">
-                <img src="img/grecia.png" alt="Forest" width="170" height="160">
-                <img src="img/macedonia.png" alt="Forest" width="120" height="150">
-                <img src="img/croatia.png" alt="Forest" width="170" height="160">
-            </div>
+              <div class="responsive">
+                <div class="desc">Add a description of the image here</div>
+                <div class="gallery">
+                    <img src="img/romania.png" alt="Trolltunga Norway" width="160" height="150">
+                </div>
+              </div>
+              <div class="responsive">
+                <div class="desc">Add a description of the image here</div>
+                <div class="gallery">
+                    <img src="img/moldova.png" alt="Forest" width="140" height="180">
+                </div>
+              </div>
+              <div class="responsive">
+                <div class="desc">Add a description of the image here</div>
+                <div class="gallery">
+                    <img src="img/grecia.png" alt="Northern Lights" width="170" height="160">
+                </div>
+              </div>
+              <div class="responsive">
+                <div class="desc">Add a description of the image here</div>
+                <div class="gallery">
+                    <img src="img/macedonia.png" alt="Mountains" width="120" height="150">
+                </div>
+              </div>
+              <div class="responsive">
+                <div class="desc">Add a description of the image here</div>
+                <div class="gallery">
+                    <img src="img/croatia.png" alt="Mountains" width="170" height="160">
+                </div>
+              </div>
           </div>
         </div>
       </div>
@@ -401,17 +408,6 @@
         });
       });
     </script>
-
-
-    <!-- Syntax Highlighter -->
-<!--     <script type="text/javascript" src="js/shCore.js"></script>
-    <script type="text/javascript" src="js/shBrushXml.js"></script>
-    <script type="text/javascript" src="js/shBrushJScript.js"></script> -->
-
-    <!-- Optional FlexSlider Additions -->
-    <!-- <script src="js/jquery.easing.js"></script> -->
-    <!-- <script src="js/jquery.mousewheel.js"></script> -->
-    <!-- <script defer src="js/demo.js"></script> -->
 
   </body>
 
