added english language

--- a/index-en.html
+++ b/index-en.html
@@ -47,27 +47,27 @@
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">OH, MA CHEVRE!</a>
         <a class="navbar-brand js-scroll-trigger" href="index.html"><img src="img/ro.svg" width="21" height="13"></a>
-        <a class="navbar-brand js-scroll-trigger" href="index-en.html"><img src="img/gb.svg" width="21" height="13"></a>
+        <a class="navbar-brand js-scroll-trigger" href="index.html"><img src="img/gb.svg" width="21" height="13"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Meniu
+          Menu
           <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#informatii">Informatii</a>
+              <a class="nav-link js-scroll-trigger" href="#informatii">Information</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#obiective">Obiective</a>
+              <a class="nav-link js-scroll-trigger" href="#obiective">Objectives</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#echipe">Echipe Cercetare</a>
+              <a class="nav-link js-scroll-trigger" href="#echipe">Research Teams</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#activitati">Activitati</a>
+              <a class="nav-link js-scroll-trigger" href="#activitati">Activities</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#parteneri">Parteneri</a>
+              <a class="nav-link js-scroll-trigger" href="#parteneri">Partners</a>
             </li>
           </ul>
         </div>
