updated gallery - final

--- a/index.html
+++ b/index.html
@@ -241,10 +241,6 @@
                       <p class="flex-caption">Adventurer Lemon</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-3.jpg" />
-                      <p class="flex-caption">Adventurer Donut</p>
-                    </li>
-                    <li>
                       <img src="img/corsica/corsica-4.jpg" />
                       <p class="flex-caption">Adventurer Caramel</p>
                     </li>
@@ -265,10 +261,6 @@
                       <p class="flex-caption">Adventurer Caramel</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-9.jpg" />
-                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
-                    </li>
-                    <li>
                       <img src="img/corsica/corsica-10.jpg" />
                       <p class="flex-caption">Adventurer Lemon</p>
                     </li>
@@ -285,19 +277,11 @@
                       <p class="flex-caption">Adventurer Caramel</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-14.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
-                    </li>
-                    <li>
                       <img src="img/corsica/corsica-15.jpg" />
                       <p class="flex-caption">Adventurer Caramel</p>
                     </li>
                     <li>
                       <img src="img/corsica/corsica-16.jpg" />
-                      <p class="flex-caption">Adventurer Caramel</p>
-                    </li>
-                    <li>
-                      <img src="img/corsica/corsica-17.jpg" />
                       <p class="flex-caption">Adventurer Caramel</p>
                     </li>
                     <li>
@@ -318,6 +302,120 @@
                     </li>
                     <li>
                       <img src="img/corsica/corsica-22.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <!-- croatia -->
+                    <li>
+                      <img src="img/croatia/croatia-4.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-5.jpg" />
+                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-12.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-14.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-15.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-16.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-17.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-19.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-21.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-23.jpg" />
+                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-25.jpg" />
+                      <p class="flex-caption">Adventurer Donut</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-26.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-27.jpg" />
+                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-29.jpg" />
+                      <p class="flex-caption">Adventurer Donut</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-30.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-32.jpg" />
+                      <p class="flex-caption">Adventurer Lemon</p>
+                    </li>
+                    <!-- republica moldova -->
+                    <li>
+                      <img src="img/moldova/moldova-1.jpg" />
+                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-2.jpg" />
+                      <p class="flex-caption">Adventurer Lemon</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-4.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-6.jpg" />
+                      <p class="flex-caption">Adventurer Lemon</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-7.jpg" />
+                      <p class="flex-caption">Adventurer Donut</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-8.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-9.jpg" />
+                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-10.jpg" />
+                      <p class="flex-caption">Adventurer Lemon</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-11.jpg" />
+                      <p class="flex-caption">Adventurer Donut</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-12.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-15.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-16.jpg" />
                       <p class="flex-caption">Adventurer Caramel</p>
                     </li>
                   </ul>
@@ -331,9 +429,6 @@
                       <img src="img/corsica/corsica-2.jpg" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-3.jpg" />
-                    </li>
-                    <li>
                       <img src="img/corsica/corsica-4.jpg" />
                     </li>
                     <li>
@@ -349,12 +444,6 @@
                       <img src="img/corsica/corsica-8.jpg" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-9.jpg" />
-                    </li>
-                    <li>
-                      <img src="img/corsica/corsica-10.jpg" />
-                    </li>
-                    <li>
                       <img src="img/corsica/corsica-11.jpg" />
                     </li>
                     <li>
@@ -364,16 +453,10 @@
                       <img src="img/corsica/corsica-13.jpg" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-14.jpg" />
-                    </li>
-                    <li>
                       <img src="img/corsica/corsica-15.jpg" />
                     </li>
                     <li>
                       <img src="img/corsica/corsica-16.jpg" />
-                    </li>
-                    <li>
-                      <img src="img/corsica/corsica-17.jpg" />
                     </li>
                     <li>
                       <img src="img/corsica/corsica-18.jpg" />
@@ -389,6 +472,98 @@
                     </li>
                     <li>
                       <img src="img/corsica/corsica-22.jpg" />
+                    </li>
+                    <!-- croatia -->
+                    <li>
+                      <img src="img/croatia/croatia-4.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-5.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-9.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-10.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-12.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-14.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-15.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-16.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-17.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-19.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-21.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-23.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-25.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-26.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-27.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-29.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-30.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-32.jpg" />
+                    </li>
+                    <!-- republica moldova -->
+                    <li>
+                      <img src="img/moldova/moldova-1.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-2.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-4.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-6.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-7.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-8.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-9.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-10.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-11.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-12.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-15.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-16.jpg" />
                     </li>
                   </ul>
                 </div>
