--- a/index-en.html
+++ b/index-en.html
@@ -233,51 +233,189 @@
                 <div class="flexslider" id="f1">
                   <ul class="slides">
                     <li>
-                      <img src="images/corsica-1.jpg" />
+                      <img src="img/corsica/corsica-1.jpg" />
                       <p class="flex-caption">Adventurer Cheesecake Brownie</p>
                     </li>
                     <li>
-                      <img src="images/corsica-2.jpg" />
+                      <img src="img/corsica/corsica-2.jpg" />
                       <p class="flex-caption">Adventurer Lemon</p>
                     </li>
                     <li>
-                      <img src="images/corsica-3.jpg" />
-                      <p class="flex-caption">Adventurer Donut</p>
-                    </li>
-                    <li>
-                      <img src="images/corsica-4.jpg" />
+                      <img src="img/corsica/corsica-4.jpg" />
                       <p class="flex-caption">Adventurer Caramel</p>
                     </li>
                     <li>
-                      <img src="images/corsica-5.jpg" />
+                      <img src="img/corsica/corsica-5.jpg" />
                       <p class="flex-caption">Adventurer Cheesecake Brownie</p>
                     </li>
                     <li>
-                      <img src="images/corsica-6.jpg" />
+                      <img src="img/corsica/corsica-6.jpg" />
                       <p class="flex-caption">Adventurer Lemon</p>
                     </li>
                     <li>
-                      <img src="images/corsica-7.jpg" />
+                      <img src="img/corsica/corsica-7.jpg" />
                       <p class="flex-caption">Adventurer Donut</p>
                     </li>
                     <li>
-                      <img src="images/corsica-8.jpg" />
+                      <img src="img/corsica/corsica-8.jpg" />
                       <p class="flex-caption">Adventurer Caramel</p>
                     </li>
                     <li>
-                      <img src="images/corsica-9.jpg" />
-                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
-                    </li>
-                    <li>
-                      <img src="images/corsica-10.jpg" />
+                      <img src="img/corsica/corsica-10.jpg" />
                       <p class="flex-caption">Adventurer Lemon</p>
                     </li>
                     <li>
-                      <img src="images/corsica-11.jpg" />
+                      <img src="img/corsica/corsica-11.jpg" />
                       <p class="flex-caption">Adventurer Donut</p>
                     </li>
                     <li>
-                      <img src="images/corsica-12.jpg" />
+                      <img src="img/corsica/corsica-12.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/corsica/corsica-13.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/corsica/corsica-15.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/corsica/corsica-16.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/corsica/corsica-18.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/corsica/corsica-19.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/corsica/corsica-20.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/corsica/corsica-21.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/corsica/corsica-22.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <!-- croatia -->
+                    <li>
+                      <img src="img/croatia/croatia-4.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-5.jpg" />
+                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-12.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-14.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-15.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-16.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-17.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-19.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-21.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-23.jpg" />
+                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-25.jpg" />
+                      <p class="flex-caption">Adventurer Donut</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-26.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-27.jpg" />
+                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-29.jpg" />
+                      <p class="flex-caption">Adventurer Donut</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-30.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-32.jpg" />
+                      <p class="flex-caption">Adventurer Lemon</p>
+                    </li>
+                    <!-- republica moldova -->
+                    <li>
+                      <img src="img/moldova/moldova-1.jpg" />
+                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-2.jpg" />
+                      <p class="flex-caption">Adventurer Lemon</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-4.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-6.jpg" />
+                      <p class="flex-caption">Adventurer Lemon</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-7.jpg" />
+                      <p class="flex-caption">Adventurer Donut</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-8.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-9.jpg" />
+                      <p class="flex-caption">Adventurer Cheesecake Brownie</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-10.jpg" />
+                      <p class="flex-caption">Adventurer Lemon</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-11.jpg" />
+                      <p class="flex-caption">Adventurer Donut</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-12.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-15.jpg" />
+                      <p class="flex-caption">Adventurer Caramel</p>
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-16.jpg" />
                       <p class="flex-caption">Adventurer Caramel</p>
                     </li>
                   </ul>
@@ -285,40 +423,147 @@
             <div class="flexslider carousel" id="f2">
                   <ul class="slides">
                     <li>
-                      <img src="images/corsica-1.jpg" />
+                      <img src="img/corsica/corsica-1.jpg" />
                     </li>
                     <li>
-                      <img src="images/corsica-2.jpg" />
+                      <img src="img/corsica/corsica-2.jpg" />
                     </li>
                     <li>
-                      <img src="images/corsica-3.jpg" />
+                      <img src="img/corsica/corsica-4.jpg" />
                     </li>
                     <li>
-                      <img src="images/corsica-4.jpg" />
+                      <img src="img/corsica/corsica-5.jpg" />
                     </li>
                     <li>
-                      <img src="images/corsica-5.jpg" />
+                      <img src="img/corsica/corsica-6.jpg" />
                     </li>
                     <li>
-                      <img src="images/corsica-6.jpg" />
+                      <img src="img/corsica/corsica-7.jpg" />
                     </li>
                     <li>
-                      <img src="images/corsica-7.jpg" />
+                      <img src="img/corsica/corsica-8.jpg" />
                     </li>
                     <li>
-                      <img src="images/corsica-8.jpg" />
+                      <img src="img/corsica/corsica-11.jpg" />
                     </li>
                     <li>
-                      <img src="images/corsica-9.jpg" />
+                      <img src="img/corsica/corsica-12.jpg" />
                     </li>
                     <li>
-                      <img src="images/corsica-10.jpg" />
+                      <img src="img/corsica/corsica-13.jpg" />
                     </li>
                     <li>
-                      <img src="images/corsica-11.jpg" />
+                      <img src="img/corsica/corsica-15.jpg" />
                     </li>
                     <li>
-                      <img src="images/corsica-12.jpg" />
+                      <img src="img/corsica/corsica-16.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/corsica/corsica-18.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/corsica/corsica-19.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/corsica/corsica-20.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/corsica/corsica-21.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/corsica/corsica-22.jpg" />
+                    </li>
+                    <!-- croatia -->
+                    <li>
+                      <img src="img/croatia/croatia-4.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-5.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-9.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-10.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-12.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-14.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-15.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-16.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-17.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-19.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-21.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-23.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-25.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-26.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-27.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-29.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-30.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/croatia/croatia-32.jpg" />
+                    </li>
+                    <!-- republica moldova -->
+                    <li>
+                      <img src="img/moldova/moldova-1.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-2.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-4.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-6.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-7.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-8.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-9.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-10.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-11.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-12.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-15.jpg" />
+                    </li>
+                    <li>
+                      <img src="img/moldova/moldova-16.jpg" />
                     </li>
                   </ul>
                 </div>
