small updates partners

--- a/index-en.html
+++ b/index-en.html
@@ -484,9 +484,6 @@
                       <img src="img/croatia/croatia-9.jpg" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-10.jpg" />
-                    </li>
-                    <li>
                       <img src="img/croatia/croatia-12.jpg" />
                     </li>
                     <li>
@@ -578,33 +575,33 @@
           <div class="col-lg-8 mx-auto">
             <h2>PARTENERI</h2>
               <div class="responsive">
-                <div class="desc">Add a description of the image here</div>
+                <div class="desc">Faculty of Veterinary Medicine, Iasi, Romania</div>
                 <div class="gallery">
-                    <img src="img/romania.png" alt="Trolltunga Norway" width="160" height="150">
+                    <img src="img/romania.png" alt="Faculty of Veterinary Medicine, Iasi, Romania" width="160" height="150">
                 </div>
               </div>
               <div class="responsive">
-                <div class="desc">Add a description of the image here</div>
+                <div class="desc">The State Agricultural University, Chisinau, Moldova</div>
                 <div class="gallery">
-                    <img src="img/moldova.png" alt="Forest" width="140" height="180">
+                    <img src="img/moldova.png" alt="The State Agricultural University, Chisinau, Moldova" width="140" height="180">
                 </div>
               </div>
               <div class="responsive">
-                <div class="desc">Add a description of the image here</div>
+                <div class="desc">International Hellenic University, Thessaloniki, Greece</div>
                 <div class="gallery">
-                    <img src="img/grecia.png" alt="Northern Lights" width="170" height="160">
+                    <img src="img/grecia.png" alt="International Hellenic University, Thessaloniki, Greece" width="170" height="160">
                 </div>
               </div>
               <div class="responsive">
-                <div class="desc">Add a description of the image here</div>
+                <div class="desc">Faculty of Veterinary Medicine, Skopje, Macedonia</div>
                 <div class="gallery">
-                    <img src="img/macedonia.png" alt="Mountains" width="120" height="150">
+                    <img src="img/macedonia.png" alt="Faculty of Veterinary Medicine, Skopje, Macedonia" width="120" height="150">
                 </div>
               </div>
               <div class="responsive">
-                <div class="desc">Add a description of the image here</div>
+                <div class="desc">Faculty of Veterinary Medicine, Zagreb, Croatia</div>
                 <div class="gallery">
-                    <img src="img/croatia.png" alt="Mountains" width="170" height="160">
+                    <img src="img/croatia.png" alt="Faculty of Veterinary Medicine, Zagreb, Croatia" width="170" height="160">
                 </div>
               </div>
           </div>
