--- a/index.html
+++ b/index.html
@@ -484,9 +484,6 @@
                       <img src="img/croatia/croatia-9.jpg" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-10.jpg" />
-                    </li>
-                    <li>
                       <img src="img/croatia/croatia-12.jpg" />
                     </li>
                     <li>
@@ -578,33 +575,33 @@
           <div class="col-lg-8 mx-auto">
             <h2>PARTENERI</h2>
               <div class="responsive">
-                <div class="desc">Add a description of the image here</div>
+                <div class="desc">Facultatea de Medicina Veterinara, Iasi, Romania</div>
                 <div class="gallery">
-                    <img src="img/romania.png" alt="Trolltunga Norway" width="160" height="150">
+                    <img src="img/romania.png" alt="Facultatea de Medicină Veterinară, Iaşi, Romania" width="160" height="150">
                 </div>
               </div>
               <div class="responsive">
-                <div class="desc">Add a description of the image here</div>
+                <div class="desc">Universitatea Agrară de Stat, Chisinau, Moldova</div>
                 <div class="gallery">
-                    <img src="img/moldova.png" alt="Forest" width="140" height="180">
+                    <img src="img/moldova.png" alt="Universitatea Agrară de Stat, Chisinau, Moldova" width="140" height="180">
                 </div>
               </div>
               <div class="responsive">
-                <div class="desc">Add a description of the image here</div>
+                <div class="desc">Universitatea Internationala Hellenica, Thessaloniki, Grecia</div>
                 <div class="gallery">
-                    <img src="img/grecia.png" alt="Northern Lights" width="170" height="160">
+                    <img src="img/grecia.png" alt="Universitatea Internationala Hellenica, Thessaloniki, Grecia" width="170" height="160">
                 </div>
               </div>
               <div class="responsive">
-                <div class="desc">Add a description of the image here</div>
+                <div class="desc">Facultatea de Medicina Veterinara, Skopje, Macedonia</div>
                 <div class="gallery">
-                    <img src="img/macedonia.png" alt="Mountains" width="120" height="150">
+                    <img src="img/macedonia.png" alt="Facultatea de Medicina Veterinara, Skopje, Macedonia" width="120" height="150">
                 </div>
               </div>
               <div class="responsive">
-                <div class="desc">Add a description of the image here</div>
+                <div class="desc">Facultatea de Medicina Veterinara, Zagreb, Croatia</div>
                 <div class="gallery">
-                    <img src="img/croatia.png" alt="Mountains" width="170" height="160">
+                    <img src="img/croatia.png" alt="Facultatea de Medicina Veterinara, Zagreb, Croatia" width="170" height="160">
                 </div>
               </div>
           </div>
